# random_lottery

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  git_tag.sh
.github/workflows/: release.yml
changelog/: v0.0.2.md  v0.0.3.md  v0.0.4.md  v0.0.5.md
example_files/: candidates.csv  candidates.txt  candidates.xls  candidates.xlsx  prizes.csv  prizes.txt  prizes.xls  prizes.xlsx
src/: app.rs  excel.rs  export.rs  main.rs  model.rs  theme.rs  view.rs
