[package]
name = "random_lottery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random_lottery"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
calamine = "0.24"
rfd = "0.15"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
